Renamed folders to proper names

--- a/Eventa.Server/Eventa.Server.csproj
+++ b/Eventa.Server/Eventa.Server.csproj
@@ -17,7 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\eventa.client\eventa.client.esproj">
+    <ProjectReference Include="..\eventa.client\Eventa.Client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
   </ItemGroup>
