Add dependences and AspNetCore/EntityFrameworkCore NuGet Packages

--- a/Eventa.Server/Eventa.Server.csproj
+++ b/Eventa.Server/Eventa.Server.csproj
@@ -13,13 +13,19 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.20">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Eventa.Application\Eventa.Application.csproj" />
     <ProjectReference Include="..\eventa.client\Eventa.Client.esproj">
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
     </ProjectReference>
+    <ProjectReference Include="..\Eventa.Infrastructure\Eventa.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
