--- a/Eventa.Server/appsettings.Development.json
+++ b/Eventa.Server/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password=77228Gl"
     }
-  }
 }
