--- a/Eventa.Server/appsettings.Development.json
+++ b/Eventa.Server/appsettings.Development.json
@@ -7,5 +7,11 @@
     },
     "ConnectionStrings": {
         "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password=77228Gl"
+    },
+    "EmailOptions": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "Email": "titarenkonik1@gmail.com",
+        "Password": "ryrr nzzv wnyq zdta"
     }
 }
