Add user auth views, API integration, and OTP control
Enhanced the `Eventa` app with new features:
- Added views for user registration, login, and email verification.
- Implemented `ApiService` for centralized API communication.
- Introduced `OtpInput` control for one-time password entry.
- Improved UI/UX with better styling, error handling, and validation.
- Added models for API requests and responses.
- Simplified code with C# 9.0 features and reusable components.

--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -23,6 +23,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Views\Authentication\EmailVerifySuccessView.axaml.cs">
+      <DependentUpon>EmailVerifySuccessView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Authentication\EmailVerifyView.axaml.cs">
+      <DependentUpon>EmailVerifyView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Authentication\LoginView.axaml.cs">
       <DependentUpon>LoginView.axaml</DependentUpon>
     </Compile>
