Add MainPageView, refactor models, and enhance API handling
- Added new projects: `Eventa.Application`, `Eventa.Client`, and `Eventa.Domain`.
- Introduced `MainPageView` and `MainPageViewModel` for logged-in user UI.
- Restructured models under `Eventa.Models.Authentication` for better organization.
- Refactored `ApiService` to support dynamic registration endpoints and improve error handling.
- Updated `EmailVerifyViewModel`, `LoginViewModel`, and `RegistrationViewModel`:
  - Added support for `LoginResponseModel` and enhanced navigation logic.
  - Improved form handling and validation.
- Removed the `SetCode` method from `OtpInput.axaml.cs`.
- Refactored `StringNotEmptyConverter` to simplify code.
- Updated `Eventa.csproj` to include `MainPageView.axaml.cs`.
- Made the organization field visible in `RegistrationView.axaml`.

These changes improve maintainability, user navigation, and API integration.

--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -35,5 +35,8 @@
     <Compile Update="Views\Authentication\RegistrationView.axaml.cs">
       <DependentUpon>RegistrationView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\MainPageView.axaml.cs">
+      <DependentUpon>MainPageView.axaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
