Refactor MainWindow and MainView components
Refactored `MainWindow` and `MainView` to `MainWindowView` and `MainPageView` for improved naming consistency. Updated `App.axaml.cs` to use `MainWindowView`.

Reorganized project structure by moving `MainPageView` and `MainView` files to `Views/Main` and updated `Eventa.csproj` accordingly. Removed legacy implementations and introduced new `MainPageView` and `MainView` with enhanced UI, including navigation, filtering, and event display.

Moved `MainPageViewModel` and `MainViewModel` to `ViewModels/Main` and updated their logic. Updated references to the new structure across the project.

Improved security by removing the hardcoded database password from `appsettings.Development.json`. Performed general cleanup by removing unused code and improving file organization.

--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -35,8 +35,11 @@
     <Compile Update="Views\Authentication\RegistrationView.axaml.cs">
       <DependentUpon>RegistrationView.axaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\MainPageView.axaml.cs">
+    <Compile Update="Views\Main\MainPageView.axaml.cs">
       <DependentUpon>MainPageView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Main\MainWindowView.axaml.cs">
+      <DependentUpon>MainWindowView.axaml</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
