--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -35,6 +35,9 @@
     <Compile Update="Views\Authentication\RegistrationView.axaml.cs">
       <DependentUpon>RegistrationView.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Views\Events\BrowseEventsView.axaml.cs">
+      <DependentUpon>BrowseEventsView.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Main\MainPageView.axaml.cs">
       <DependentUpon>MainPageView.axaml</DependentUpon>
     </Compile>
