--- a/Eventa.Server/Eventa.Server.csproj
+++ b/Eventa.Server/Eventa.Server.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Eventa.Infrastructure\Eventa.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\uploads\" />
+  </ItemGroup>
+
 </Project>
