Add ImageCarousel and integrate AsyncImageLoader
Introduced a new `ImageCarousel` control with autoplay, navigation, and dot indicators for enhanced image display. Integrated the `AsyncImageLoader.Avalonia` package for efficient asynchronous image loading. Updated `MainPageViewModel` to provide image URLs for the carousel.

Refactored `BrowseEventsView` and `MainPageView` layouts to include the carousel and improve structure. Enhanced event card layouts and footer design. Added styles for carousel elements and improved overall UI consistency.

Performed general code cleanup, removed redundant elements, and ensured better readability and maintainability.

--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AsyncImageLoader.Avalonia" />
     <PackageReference Include="Avalonia" />
     <PackageReference Include="Avalonia.Themes.Fluent" />
     <PackageReference Include="Avalonia.Fonts.Inter" />
@@ -24,6 +25,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Controls\ImageCarousel.axaml.cs">
+      <DependentUpon>ImageCarousel.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Authentication\EmailVerifySuccessView.axaml.cs">
       <DependentUpon>EmailVerifySuccessView.axaml</DependentUpon>
     </Compile>
