--- a/Eventa.Mobile/Directory.Packages.props
+++ b/Eventa.Mobile/Directory.Packages.props
@@ -6,6 +6,7 @@
   <ItemGroup>
     <!-- Avalonia packages -->
     <!-- Important: keep version in sync! -->
+    <PackageVersion Include="AsyncImageLoader.Avalonia" Version="3.4.3" />
     <PackageVersion Include="Avalonia" Version="11.3.6" />
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.6" />
     <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.6" />
