--- a/Eventa.Server/appsettings.Development.json
+++ b/Eventa.Server/appsettings.Development.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password="
+        "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password=77228Gl"
     },
     "EmailOptions": {
         "Host": "smtp.gmail.com",
