Refactor event management views and add tag support
Replaced `CreateOrganizerEventView` with `CreateEditDeleteOrganizerEventView` to unify event creation, editing, and deletion functionality. Introduced `TagContainer` control for dynamic tag management, improving the user experience.

Updated `BrowseOrganizerEventsViewModel` to integrate the new view and reset state when switching views. Added `BoolToStringConverter` for dynamic UI text updates.

Enhanced validation and error handling in `CreateEditDeleteOrganizerEventViewModel` for required fields. Removed legacy code and redundant namespaces for better maintainability.

Improved UI with features like image upload, auto-complete for event places, and tag selection dropdown. Added support for managing additional event dates dynamically.

--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -28,6 +28,9 @@
     <Compile Update="Controls\ImageCarousel.axaml.cs">
       <DependentUpon>ImageCarousel.axaml</DependentUpon>
     </Compile>
+    <Compile Update="Controls\TagContainer.axaml.cs">
+      <DependentUpon>TagContainer.axaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Authentication\EmailVerifySuccessView.axaml.cs">
       <DependentUpon>EmailVerifySuccessView.axaml</DependentUpon>
     </Compile>
@@ -40,8 +43,8 @@
     <Compile Update="Views\Authentication\RegistrationView.axaml.cs">
       <DependentUpon>RegistrationView.axaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\Events\CreateOrganizerEventView.axaml.cs">
-      <DependentUpon>CreateOrganizerEventView.axaml</DependentUpon>
+    <Compile Update="Views\Events\CreateEditDeleteOrganizerEventView.axaml.cs">
+      <DependentUpon>CreateEditDeleteOrganizerEventView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Events\BrowseOrganizerEventsView.axaml.cs">
       <DependentUpon>BrowseOrganizerEventsView.axaml</DependentUpon>
