--- a/Eventa.Infrastructure/Eventa.Infrastructure.csproj
+++ b/Eventa.Infrastructure/Eventa.Infrastructure.csproj
@@ -22,6 +22,7 @@
 
     <PackageReference Include="MimeKit" Version="4.14.0" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
   </ItemGroup>
 
   <ItemGroup>
