Added more formats, bigger image resolution, ignoring images in uploads/events

--- a/.gitignore
+++ b/.gitignore
@@ -452,3 +452,13 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+/Eventa.Server/wwwroot/uploads/events/12.jpg
+/Eventa.Server/wwwroot/uploads/events/13.jpg
+/Eventa.Server/wwwroot/uploads/events/14.jpg
+/Eventa.Server/wwwroot/uploads/events/15.jpg
+/Eventa.Server/wwwroot/uploads/events/16.jpg
+/Eventa.Server/wwwroot/uploads/events/17.jpg
+/Eventa.Server/wwwroot/uploads/events/18.jpg
+/Eventa.Server/wwwroot/uploads/events/19.jpg
+/Eventa.Server/wwwroot/uploads/events/20.jpg
+/Eventa.Server/wwwroot/uploads/events/80.png
