Fixed more bugs related to creating event, added browser support (there are a few bugs to solve be prod ready), fixed missed symbols in fonts (not perfect, better than transparent).
TODO: saving for browser, uploading image browser, loading images (somehow android server).

--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -9,6 +9,13 @@
   <ItemGroup>
     <AvaloniaResource Include="Assets\**" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <AvaloniaResource Remove="Assets\Fonts\Kadwa\ANTQUAB.TTF" />
+    <AvaloniaResource Remove="Assets\Fonts\Kadwa\ANTQUABI.TTF" />
+    <AvaloniaResource Remove="Assets\Fonts\Kadwa\ANTQUAI.TTF" />
+    <AvaloniaResource Remove="Assets\Fonts\Kadwa\BKANT.TTF" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AsyncImageLoader.Avalonia" />
