Add LoadImage for temp images, add DeleteTempImageService

--- a/Eventa.Server/appsettings.json
+++ b/Eventa.Server/appsettings.json
@@ -1,9 +1,24 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password=77228Gl"
+    },
+    "EmailOptions": {
+        "Host": "smtp.gmail.com",
+        "Port": 587,
+        "Email": "titarenkonik1@gmail.com",
+        "Password": "ryrr nzzv wnyq zdta"
+    },
+    "Jwt": {
+        "Audience": "https://localhost:7293",
+        "Issuer": "https://localhost:7293",
+        "Key": "7c07aae2-a2b6-41b1-bec0-209485079d82",
+        "ExpiresDay": 30
     }
-  },
-  "AllowedHosts": "*"
 }
