--- a/Eventa.Server/appsettings.json
+++ b/Eventa.Server/appsettings.json
@@ -7,7 +7,7 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password=77228Gl"
+        "DefaultConnection": "Server=localhost;Port=3306;Database=EventaDb;User=root;Password="
     },
     "EmailOptions": {
         "Host": "smtp.gmail.com",
