--- a/Eventa.Server/Eventa.Server.csproj
+++ b/Eventa.Server/Eventa.Server.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,10 +18,6 @@
   <ItemGroup>
     <ProjectReference Include="..\Eventa.Application\Eventa.Application.csproj" />
     <ProjectReference Include="..\Eventa.Infrastructure\Eventa.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\uploads\events\" />
   </ItemGroup>
 
 </Project>
