Add appsetting.Development.json to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -452,5 +452,6 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-
-/Eventa.Server/wwwroot/uploads/events/*
+/Eventa.Server/appsettings.json
+/Eventa.Server/appsettings.json
+/Eventa.Server/appsettings.Development.json
