Implement Stripe, add order service and order repository, implement busines logic

--- a/.gitignore
+++ b/.gitignore
@@ -452,6 +452,8 @@ $RECYCLE.BIN/
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
-/Eventa.Server/appsettings.json
-/Eventa.Server/appsettings.json
+
+/Eventa.Server/wwwroot/uploads/events/*
+/Eventa.Server/appsettings.Development.json
+/Eventa.Server/appsettings.Development.json
 /Eventa.Server/appsettings.Development.json
