--- a/Eventa.Infrastructure/Eventa.Infrastructure.csproj
+++ b/Eventa.Infrastructure/Eventa.Infrastructure.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.3" />
     <PackageReference Include="SendGrid" Version="9.29.3" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.11" />
+    <PackageReference Include="Stripe.net" Version="49.1.0" />
   </ItemGroup>
 
   <ItemGroup>
