Add events filtering by name and date, add latitude and longtitude for places

--- a/Eventa.Server/appsettings.Development.json
+++ b/Eventa.Server/appsettings.Development.json
@@ -1,8 +1,8 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Jwt": {
+        "Audience": "https://localhost:7293",
+        "Issuer": "https://localhost:7293",
+        "Key": "7c07aae2-a2b6-41b1-bec0-209485079d82",
+        "ExpiresDay": 30
     }
-  }
 }
