--- a/Eventa.Mobile/Directory.Packages.props
+++ b/Eventa.Mobile/Directory.Packages.props
@@ -17,6 +17,7 @@
     <PackageVersion Include="Avalonia.Android" Version="11.3.6" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageVersion Include="LoadingIndicators.Avalonia" Version="11.0.11.1" />
+    <PackageVersion Include="Mapsui.Avalonia" Version="5.0.0" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.15" />
   </ItemGroup>
 </Project>
