--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -31,6 +31,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="LoadingIndicators.Avalonia" />
     <PackageReference Include="Mapsui.Avalonia" />
+    <PackageReference Include="Stripe.net" />
   </ItemGroup>
 
   <ItemGroup>
@@ -78,6 +79,9 @@
     </Compile>
     <Compile Update="Views\Main\MainWindowView.axaml.cs">
       <DependentUpon>MainWindowView.axaml</DependentUpon>
+    </Compile>
+    <Compile Update="Views\Ordering\TicketOrderView.axaml.cs">
+      <DependentUpon>TicketOrderView.axaml</DependentUpon>
     </Compile>
     <Compile Update="Views\Ordering\SeatOrderView.axaml.cs">
       <DependentUpon>SeatOrderView.axaml</DependentUpon>
