--- a/Eventa.Mobile/Eventa/Eventa.csproj
+++ b/Eventa.Mobile/Eventa/Eventa.csproj
@@ -25,8 +25,8 @@
     <PackageReference Include="Avalonia.Fonts.Inter" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Include="Avalonia.Diagnostics">
-      <IncludeAssets Condition="'$(Configuration)' != 'Debug'">None</IncludeAssets>
-      <PrivateAssets Condition="'$(Configuration)' != 'Debug'">All</PrivateAssets>
+      <IncludeAssets Condition="'$(Configuration)' != 'Trace'">None</IncludeAssets>
+      <PrivateAssets Condition="'$(Configuration)' != 'Trace'">All</PrivateAssets>
     </PackageReference>
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="LoadingIndicators.Avalonia" />
