Implemented one way google auth for desktop

--- a/Eventa.Browser/Eventa.Browser.csproj
+++ b/Eventa.Browser/Eventa.Browser.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\Eventa.Mobile\Eventa\Eventa.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
+
 </Project>
