--- a/Eventa.Mobile/Eventa.Android/Eventa.Android.csproj
+++ b/Eventa.Mobile/Eventa.Android/Eventa.Android.csproj
@@ -25,4 +25,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Eventa\Eventa.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
