--- a/Eventa.Server/appsettings.json
+++ b/Eventa.Server/appsettings.json
@@ -20,5 +20,9 @@
     "Issuer": "https://localhost:7293",
     "Key": "7c07aae2-a2b6-41b1-bec0-209485079d82",
     "ExpiresDay": 30
+  },
+  "SendGrid": {
+    "Email": "valuehere",
+    "Key": "valuehere"
   }
 }
