--- a/Eventa.Mobile/Directory.Packages.props
+++ b/Eventa.Mobile/Directory.Packages.props
@@ -7,6 +7,7 @@
     <!-- Avalonia packages -->
     <!-- Important: keep version in sync! -->
     <PackageVersion Include="AsyncImageLoader.Avalonia" Version="3.4.3" />
+    <PackageVersion Include="Auth0Avalonia" Version="1.1.4" />
     <PackageVersion Include="Avalonia" Version="11.3.6" />
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.6" />
     <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.6" />
@@ -16,6 +17,7 @@
     <PackageVersion Include="Avalonia.Browser" Version="11.3.6" />
     <PackageVersion Include="Avalonia.Android" Version="11.3.6" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="Duende.IdentityModel.OidcClient" Version="6.0.1" />
     <PackageVersion Include="LoadingIndicators.Avalonia" Version="11.0.11.1" />
     <PackageVersion Include="Mapsui.Avalonia" Version="5.0.0" />
     <PackageVersion Include="SkiaSharp.QrCode" Version="0.9.0" />
