--- a/Eventa.Browser/Eventa.Browser.csproj
+++ b/Eventa.Browser/Eventa.Browser.csproj
@@ -8,15 +8,18 @@
 	<PublishTrimmed>false</PublishTrimmed>
   </PropertyGroup>
   <ItemGroup>
+    <AvaloniaXaml Remove="wwwroot\js\**" />
+    <Compile Remove="wwwroot\js\**" />
+    <Content Remove="wwwroot\js\**" />
+    <EmbeddedResource Remove="wwwroot\js\**" />
+    <None Remove="wwwroot\js\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Avalonia.Browser" Version="11.3.6" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Eventa.Mobile\Eventa\Eventa.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\js\" />
   </ItemGroup>
 
 </Project>
