--- a/Eventa.Infrastructure/Eventa.Infrastructure.csproj
+++ b/Eventa.Infrastructure/Eventa.Infrastructure.csproj
@@ -34,4 +34,8 @@
     <ProjectReference Include="..\Eventa.Application\Eventa.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
