--- a/Eventa.Server/appsettings.json
+++ b/Eventa.Server/appsettings.json
@@ -1,4 +1,18 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5000"
+      },
+      "Https": {
+        "Url": "https://0.0.0.0:5001",
+        "Certificate": {
+          "Path": "/etc/letsencrypt/live/eventa-app.fun/fullchain.pem",
+          "KeyPath": "/etc/letsencrypt/live/eventa-app.fun/privkey.pem"
+        }
+      }
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -16,13 +30,19 @@
     "Password": "ryrr nzzv wnyq zdta"
   },
   "Jwt": {
-    "Audience": "https://localhost:7293",
-    "Issuer": "https://localhost:7293",
+    "Audience": "https://0.0.0.0:5001",
+    "Issuer": "https://0.0.0.0:5001",
     "Key": "7c07aae2-a2b6-41b1-bec0-209485079d82",
     "ExpiresDay": 30
   },
   "SendGrid": {
     "Email": "valuehere",
     "Key": "valuehere"
+  },
+  "Stripe": {
+    "SecretKey": "sk_test_valuehere",
+    "PublishKey": "pk_test_valuehere",
+    "Signature": "Stripe-Signature",
+    "WebhookSecret": "whsec_valuehere"
   }
 }
